# rea-scraper

./: README.md  pyproject.toml
rea_scraper/: scrapy.cfg
rea_scraper/rea_scraper/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
rea_scraper/rea_scraper/spiders/: realcommercial.py
sample_data/: output.csv  sample_data.json
