[tool.poetry]
name = "realcommercial"
version = "0.1.0"
description = ""
authors = ["Temujin U. Lampasa <temujin.lampasa@obf.ateneo.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.7.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
